Yes, I am pushing up something with a bug. No, I do not care. As it stands, new users get stuck in an infinite loop between the blog-creation page and log in page. Either blogs are not being created, or there is some broken logic.

--- a/public/main.css
+++ b/public/main.css
@@ -173,6 +173,7 @@ a.button {
 .postbuttons {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     flex-direction: row-reverse;
     margin: 2vh 1vw 1vh 0;
 }
@@ -345,7 +346,7 @@ h3.postchat {
 .titleinput {
     height: 20px;
     padding: 5px;
-    inline-size: 48%;
+    inline-size: 74%;
     overflow-wrap: normal;
     border: none;
     border-radius: 8px;
@@ -417,6 +418,10 @@ form.trash {
 }
 #love:hover {
     cursor: pointer;
+    filter: drop-shadow(0rem 0rem 0.5rem rgba(0, 0, 0, 0.5)) invert(62%) sepia(25%) saturate(1528%) hue-rotate(130deg) brightness(103%) contrast(88%);
+}
+#loved:hover {
+    cursor: pointer;
 }
 #reblog:hover {
     cursor: pointer;
@@ -465,7 +470,7 @@ form.trash {
     font-size: x-large;
     text-align: center;
     color: rgb(34, 34, 34);
-    padding: 10px 0 20px;
+    padding-bottom: 20px;
 }
 .registertext {
     font-size: large;
@@ -489,7 +494,7 @@ form.trash {
 #regbutton {
     background-color: #138511;
     text-align: center;
-    height: 40px;
+    height: 38px;
     cursor: pointer;
     font-family: 'Inter', sans-serif;
 }
